--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -1,10 +1,17 @@
+ul{
+  padding: 0;  
+  max-height: calc(100vh - 15em);
+  overflow: auto;
+
+}
+
 .cart-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid #8a2b06;
-  padding: 1rem 0;
-  margin: 1rem 0;
+  border-bottom: 2px solid crimson;
+  padding:10px 0;
+  margin:10px 0;
 }
 
 .cart-item h2 {
@@ -21,7 +28,7 @@
 
 .price {
   font-weight: bold;
-  color: #8a2b06;
+  color: crimson;
 }
 
 .amount {
@@ -47,8 +54,8 @@
   font: inherit;
   font-weight: bold;
   font-size: 1.25rem;
-  color: #8a2b06;
-  border: 1px solid #8a2b06;
+  color: crimson;
+  border: 1px solid crimson;
   width: 3rem;
   text-align: center;
   border-radius: 6px;
@@ -60,6 +67,40 @@
 
 .cart-item button:hover,
 .cart-item button:active {
-  background-color: #8a2b06;
+  background-color: crimson;
   color: white;
+}
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(175, 174, 174, 0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+/* ::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   40% 0%,
+									   75% 84%,
+									   from(#ee4747),
+									   to(#ee4747),
+									   color-stop(.6,#ee8080))
+} */
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgba(240, 174, 174, 0.897)),
+									   color-stop(0.72, rgba(243, 114, 114, 0.938)),
+									   color-stop(0.86, rgb(238, 46, 46)));
 }
