--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -55,7 +55,7 @@
 } */
 
 .bump {
-  animation: bump 300ms ease-out;
+  animation: bump 400ms ease-out;
 }
 
 @keyframes bump {
@@ -63,13 +63,16 @@
     transform: scale(1);
   }
   10% {
-    transform: scale(0.9);
+    transform: scale(0.7);
   }
   30% {
     transform: scale(1.1);
   }
+  40% {
+    transform: scale(1.2);
+  }
   50% {
-    transform: scale(1.15);
+    transform: scale(1.3);
   }
   100% {
     transform: scale(1);
