--- a/src/components/Meals/MealItem/MealItemForm.module.css
+++ b/src/components/Meals/MealItem/MealItemForm.module.css
@@ -1,20 +1,24 @@
 .form {
   text-align: right;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .form button {
-  font: inherit;
   cursor: pointer;
-  background-color: #8a2b06;
-  border: 1px solid #8a2b06;
+  background-color: crimson;
+  border: none;
   color: white;
-  padding: 0.25rem 2rem;
   border-radius: 20px;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 5px 18px;
 }
 
 .form button:hover,
 .form button:active {
-  background-color: #641e03;
-  border-color: #641e03;
+  background-color: #c11c3b;
 }
