--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -1,8 +1,8 @@
-ul{
-  padding: 0;  
+ul {
+  padding: 0;
   max-height: calc(100vh - 15em);
   overflow: auto;
-
+  margin-top: 0;
 }
 
 .cart-item {
@@ -10,8 +10,10 @@ ul{
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid crimson;
-  padding:10px 0;
-  margin:10px 0;
+  padding: 10px 0;
+  margin: 10px 0;
+  width: calc(100% - 2em);
+  margin: auto;
 }
 
 .cart-item h2 {
@@ -71,17 +73,15 @@ ul{
   color: white;
 }
 
-::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(175, 174, 174, 0.3);
-	background-color: #F5F5F5;
-	border-radius: 10px;
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(175, 174, 174, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
 }
 
-::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #F5F5F5;
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
 }
 
 /* ::-webkit-scrollbar-thumb
@@ -94,13 +94,14 @@ ul{
 									   to(#ee4747),
 									   color-stop(.6,#ee8080))
 } */
-::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-image: -webkit-gradient(linear,
-									   left bottom,
-									   left top,
-									   color-stop(0.44, rgba(240, 174, 174, 0.897)),
-									   color-stop(0.72, rgba(243, 114, 114, 0.938)),
-									   color-stop(0.86, rgb(238, 46, 46)));
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgba(240, 174, 174, 0.897)),
+    color-stop(0.72, rgba(243, 114, 114, 0.938)),
+    color-stop(0.86, rgb(238, 46, 46))
+  );
 }
